Version 1.2,  2012/12/19

* Base all classes off object.
* Support for reading authentication data from ~/.netrc